package com.mrathena.design.pattern.structural.patterns.adapter.pattern.implement.interfact_.adapter.pattern;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

/**
 * @author mrathena on 2020/1/16 15:57
 */
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class MouseClickEvent {

	private Mouse mouse;

}
